--- a/Web/ClientApp/package.json
+++ b/Web/ClientApp/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
     "jquery": "3.4.1",
+    "jwt-decode": "^2.2.0",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
     "zone.js": "0.9.1"
