Added models, db etc. TODO: Migrations and connections.

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "Default": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "Default": "Server=(localdb)\\mssqllocaldb;Database=dyszkaPl;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "URI": {
         "IdentityServer": "https://localhost:5000"
