--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -2,6 +2,9 @@
     "ConnectionStrings": {
         "Default": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
+    "URI": {
+        "Web": "https://localhost:5001"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
