--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -36,14 +36,17 @@
 
   <ItemGroup>
     <None Remove="ClientApp\src\app\app-routing.module.ts" />
+    <None Remove="ClientApp\src\app\authorization\auth-guard.ts" />
     <None Remove="ClientApp\src\app\component\BaseComponent.ts" />
     <None Remove="ClientApp\src\app\component\forbidden\forbidden.component.ts" />
     <None Remove="ClientApp\src\app\component\form\form-error.component.ts" />
     <None Remove="ClientApp\src\app\component\login\login.component.ts" />
+    <None Remove="ClientApp\src\app\component\profile\profile.component.ts" />
     <None Remove="ClientApp\src\app\component\register\register.component.ts" />
     <None Remove="ClientApp\src\app\model\builder\user.builder.ts" />
     <None Remove="ClientApp\src\app\model\user.model.ts" />
     <None Remove="ClientApp\src\app\service\identity.service.ts" />
+    <None Remove="ClientApp\src\app\service\user.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -53,14 +56,17 @@
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\app-routing.module.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\authorization\auth-guard.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\BaseComponent.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\forbidden\forbidden.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\form\form-error.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\login\login.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\component\profile\profile.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\register\register.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\builder\user.builder.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\user.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\service\identity.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\service\user.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
