Added CORS to port 5002.

--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -3,7 +3,8 @@
         "Default": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "URI": {
-        "Web": "https://localhost:5001"
+        "Web": "https://localhost:5001",
+        "Mobile": "https://localhost:5002"
     },
     "Logging": {
         "LogLevel": {
