--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <None Remove="ClientApp\src\app\app-routing.module.ts" />
     <None Remove="ClientApp\src\app\authorization\auth-guard.ts" />
+    <None Remove="ClientApp\src\app\component\administration\administration.component.ts" />
     <None Remove="ClientApp\src\app\component\BaseComponent.ts" />
     <None Remove="ClientApp\src\app\component\forbidden\forbidden.component.ts" />
     <None Remove="ClientApp\src\app\component\form\form-error.component.ts" />
@@ -47,6 +48,7 @@
     <None Remove="ClientApp\src\app\component\register\register.component.ts" />
     <None Remove="ClientApp\src\app\model\builder\user.builder.ts" />
     <None Remove="ClientApp\src\app\model\user.model.ts" />
+    <None Remove="ClientApp\src\app\service\administration.service.ts" />
     <None Remove="ClientApp\src\app\service\file.service.ts" />
     <None Remove="ClientApp\src\app\service\identity.service.ts" />
     <None Remove="ClientApp\src\app\service\user.service.ts" />
@@ -60,6 +62,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\app-routing.module.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\authorization\auth-guard.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\component\administration\administration.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\BaseComponent.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\forbidden\forbidden.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\form\form-error.component.ts" />
@@ -68,7 +71,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\component\register\register.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\builder\user.builder.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\user.model.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\service\file.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\service\administration.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\service\identity.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\service\user.service.ts" />
   </ItemGroup>
