added log display feature

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -50,6 +50,7 @@
     <None Remove="ClientApp\src\app\component\profile\profile.component.ts" />
     <None Remove="ClientApp\src\app\component\register\register.component.ts" />
     <None Remove="ClientApp\src\app\enum\dialog-result.enum.ts" />
+    <None Remove="ClientApp\src\app\model\audit-log.model.ts" />
     <None Remove="ClientApp\src\app\model\builder\user.builder.ts" />
     <None Remove="ClientApp\src\app\model\offer.model.ts" />
     <None Remove="ClientApp\src\app\model\paged-result.model.ts" />
@@ -80,6 +81,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\component\profile\profile.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\register\register.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\enum\dialog-result.enum.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\model\audit-log.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\builder\user.builder.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\offer.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\paged-result.model.ts" />
