--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -51,6 +51,7 @@
     <None Remove="ClientApp\src\app\component\message\message.component.ts" />
     <None Remove="ClientApp\src\app\component\offer\details\offer-details.component.ts" />
     <None Remove="ClientApp\src\app\component\offer\form\offer-form.component.ts" />
+    <None Remove="ClientApp\src\app\component\order\order.component.ts" />
     <None Remove="ClientApp\src\app\component\profile\profile.component.ts" />
     <None Remove="ClientApp\src\app\component\register\register.component.ts" />
     <None Remove="ClientApp\src\app\enum\dialog-result.enum.ts" />
@@ -59,6 +60,7 @@
     <None Remove="ClientApp\src\app\model\comment.model.ts" />
     <None Remove="ClientApp\src\app\model\message.model.ts" />
     <None Remove="ClientApp\src\app\model\offer.model.ts" />
+    <None Remove="ClientApp\src\app\model\order.model.ts" />
     <None Remove="ClientApp\src\app\model\paged-result.model.ts" />
     <None Remove="ClientApp\src\app\model\user.model.ts" />
     <None Remove="ClientApp\src\app\service\administration.service.ts" />
@@ -67,6 +69,7 @@
     <None Remove="ClientApp\src\app\service\identity.service.ts" />
     <None Remove="ClientApp\src\app\service\message.service.ts" />
     <None Remove="ClientApp\src\app\service\offer.service.ts" />
+    <None Remove="ClientApp\src\app\service\order.service.ts" />
     <None Remove="ClientApp\src\app\service\user.service.ts" />
   </ItemGroup>
 
@@ -90,6 +93,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\component\message\message.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\offer\details\offer-details.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\offer\form\offer-form.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\component\order\order.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\profile\profile.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\register\register.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\enum\dialog-result.enum.ts" />
@@ -98,6 +102,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\model\comment.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\message.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\offer.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\model\order.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\paged-result.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\user.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\service\administration.service.ts" />
@@ -105,6 +110,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\service\identity.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\service\message.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\service\offer.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\service\order.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\service\user.service.ts" />
   </ItemGroup>
 
