--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -42,6 +42,7 @@
     <None Remove="ClientApp\src\app\common\helpers.ts" />
     <None Remove="ClientApp\src\app\component\administration\administration.component.ts" />
     <None Remove="ClientApp\src\app\component\BaseComponent.ts" />
+    <None Remove="ClientApp\src\app\component\billing-data\billing-data.component.ts" />
     <None Remove="ClientApp\src\app\component\comment\comment.component.ts" />
     <None Remove="ClientApp\src\app\component\dialog\dialog.component.ts" />
     <None Remove="ClientApp\src\app\component\forbidden\forbidden.component.ts" />
@@ -56,6 +57,7 @@
     <None Remove="ClientApp\src\app\component\register\register.component.ts" />
     <None Remove="ClientApp\src\app\enum\dialog-result.enum.ts" />
     <None Remove="ClientApp\src\app\model\audit-log.model.ts" />
+    <None Remove="ClientApp\src\app\model\billing-data.model.ts" />
     <None Remove="ClientApp\src\app\model\builder\user.builder.ts" />
     <None Remove="ClientApp\src\app\model\comment.model.ts" />
     <None Remove="ClientApp\src\app\model\message.model.ts" />
@@ -84,6 +86,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\common\helpers.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\administration\administration.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\BaseComponent.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\component\billing-data\billing-data.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\comment\comment.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\dialog\dialog.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\component\forbidden\forbidden.component.ts" />
@@ -98,6 +101,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\component\register\register.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\enum\dialog-result.enum.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\audit-log.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\model\billing-data.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\builder\user.builder.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\comment.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\model\message.model.ts" />
