--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "PaymentOptions": {
+    "AppMargin": 10 //In percents 
   }
 }
