--- a/Web/ClientApp/package.json
+++ b/Web/ClientApp/package.json
@@ -33,6 +33,7 @@
     "core-js": "^3.3.3",
     "jquery": "3.4.1",
     "jwt-decode": "^2.2.0",
+    "ngx-json-ld": "^0.3.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
     "zone.js": "0.9.1"
