--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -29,11 +29,15 @@
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
     <Compile Remove="ClientApp\src\app\component\NewFolder1\**" />
+    <Compile Remove="ClientApp\src\assets\scss\**" />
     <Content Remove="$(SpaRoot)**" />
     <Content Remove="ClientApp\src\app\component\NewFolder1\**" />
+    <Content Remove="ClientApp\src\assets\scss\**" />
     <EmbeddedResource Remove="ClientApp\src\app\component\NewFolder1\**" />
+    <EmbeddedResource Remove="ClientApp\src\assets\scss\**" />
     <None Remove="$(SpaRoot)**" />
     <None Remove="ClientApp\src\app\component\NewFolder1\**" />
+    <None Remove="ClientApp\src\assets\scss\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
@@ -127,7 +131,6 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\src\assets\img\" />
-    <Folder Include="ClientApp\src\assets\scss\" />
   </ItemGroup>
 
   <ItemGroup>
